--- a/03. login-join-app/index.html
+++ b/03. login-join-app/index.html
@@ -1,71 +1,137 @@
 <html>
-    <head>
-        <meta charset="utf-8"/>
-        <title>Login Join App</title>
+  <head>
+    <meta charset="utf-8" />
+    <title>Login Jogin App</title>
 
-        <link rel="stylesheet" href="./styles/style.css" />
-    </head>
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
 
-    <body>
-        <div class="wrapper">
-            <div class="header">
-                <div class="header_logo">
-                    <h1>
-                        <a href="#">
-                       <img src="./images/logo.jpg" alt="Kahuna" />
-                       </a>
-                    </h1>
-                </div>
+  <body>
+    <div class="wrapper">
+      <div class="header">
+        <div class="header__inner">
+          <div class="header__logo">
+            <h1>
+              <a href="#">
+                <img src="./images/common/logo.jpg" alt="Kahuna" />
+              </a>
+            </h1>
+          </div>
 
-                <div class="header_menu">
-                    <div class="header_util"></div>
-                    <ul>
-                        <li><a href="#">LOGIN</a></li>
-                        <li><a href="#">JOIN</a></li>
-                    </ul>
-                    <div class="header_gnb">
-                    <ul>
-                        <li><a href="#">PRODUCT</a></li>
-                        <li><a href="#">CUSTOMERS</a></li>
-                        <li><a href="#">RESOURCES</a></li>
-                        <li><a href="#">ABOUT</a></li>
-                        <li><a href="#">CONTACT</a></li>
-                    </ul>
-                </div>
+          <div class="header__menu">
+            <div class="header__util">
+              <ul>
+                <li><a href="#">LOGIN</a></li>
+                <li><a href="#">JOIN</a></li>
+              </ul>
             </div>
-
-            <div class="content">
-                <div class="content_page" id="login-page-js">
-                    Login
-                </div>
-
-                <div class="content_page active" id="join-page-js">
-                    Join
-                </div>
+            <div class="header__gnb">
+              <ul>
+                <li><a href="#">PRODUCT</a></li>
+                <li><a href="#">CUSTOMERS</a></li>
+                <li><a href="#">RESOURCES</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">CONTACT</a></li>
+              </ul>
             </div>
-
-            <div class="footer">
-                <div class="footer_inner">
-                    <div class="footer_list">
-                        <ul>
-                            <li><a href="#">BLOG</a></li>
-                            <li><a href="#">CAREERS</a></li>
-                            <li><a href="#">PRESS</a></li>
-                            <li><a href="#">PRIVACY POLICY</a></li>
-                            <li><a href="#">LEGAL</a></li>
-                            <li><a href="#">DOCUMENTATION</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="footer_sns">
-                        <ul>
-                            <li>
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
-    </body>
+      </div>
+
+      <div class="content">
+        <div class="content__page active" id="login-page-js">
+          <div class="content__title">
+            <h2>LOGIN</h2>
+          </div>
+
+          <div class="content__form">
+            <div class="form__inp">
+              <i class="fas fa-user"></i>
+              <input type="text" placeholder="Id" />
+            </div>
+
+            <div class="form__inp">
+              <i class="fas fa-lock"></i>
+              <input type="password" placeholder="Password" />
+            </div>
+
+            <button type="button" class="form__btn">Login</button>
+          </div>
+
+          <div class="content__btn">
+            <button type="button">New to us? Join</button>
+          </div>
+        </div>
+
+        <div class="content__page" id="join-page-js">
+          <div class="content__title">
+            <h2>JOIN</h2>
+          </div>
+
+          <div class="content__form">
+            <div class="form__inp">
+              <i class="fas fa-user"></i>
+              <input type="text" placeholder="Id" />
+            </div>
+
+            <div class="form__inp">
+              <i class="fas fa-id-card"></i>
+              <input type="text" placeholder="Name" />
+            </div>
+
+            <div class="form__inp">
+              <i class="fas fa-lock"></i>
+              <input type="password" placeholder="Password" />
+            </div>
+
+            <button type="button" class="form__btn">Join</button>
+          </div>
+
+          <div class="content__btn">
+            <button type="button">Cancel</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer">
+        <div class="footer__inner">
+          <div class="footer__list">
+            <ul>
+              <li><a href="#">BLOG</a></li>
+              <li><a href="#">CAREERS</a></li>
+              <li><a href="#">PRESS</a></li>
+              <li><a href="#">PRIVACY POLICY</a></li>
+              <li><a href="#">LEGAL</a></li>
+              <li><a href="#">DOCUMENTATION</a></li>
+            </ul>
+          </div>
+
+          <div class="footer__sns">
+            <ul>
+              <li>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-blog"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://kit.fontawesome.com/883397d8fc.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
